<resources>
    <string name="app_name">ContentProviderPrac</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_result">ResultActivity</string>

    <string name="insert">Add Student</string>
    <string name="search">Search</string>
    <string name="information">Information</string>
    <string name="hint_student">Please enter student \'s name</string>
    <string name="hint_infomation">Please enter student\'s information</string>
    <string name="hint_keyword">Please enter keyword to search</string>
</resources>
